:art: 重构代码，修复httputil工具类，当传入url为带协议会抛出异常的bug